# backend_https

./: .env.example  .gitignore  Cargo.toml  actix  db_fresh_setup.sh  noted.rs
migrations/: 0001_credentials.up.sql  0001_user.up.sql  0002_credentials.up.sql
postman_collections/: rst04-jwt.postman_collection.json
src/: db.rs  errors.rs  lib.rs  main.rs  types.rs
src/auth/: constants.rs  handler.rs  helpers.rs  jwt.rs  mod.rs  model.rs  routes.rs  types.rs
src/auth/services/: logout.rs  mod.rs  refresh.rs  signin.rs  signup.rs
src/ping/: mod.rs  routes.rs
src/user/: handler.rs  helpers.rs  mod.rs  model.rs  routes.rs
src/user/services/: delete_user.rs  get_all_users.rs  get_user.rs  insert_user.rs  mod.rs  update_user.rs
