[package]
name = "rst04_jwt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.5"
actix-web = { version = "4.4.0" }
argon2 = "0.5.2"
chrono = "0.4.31"
dotenv = "0.15.0"
env_logger = "0.10.1"
jsonwebtoken = "9.1.0"
lazy_static = "1.4.0"
log = "0.4.20"
once_cell = "1.18.0"
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "macros", "mysql"] }
this = "0.3.0"
thiserror = "1.0.50"
validator = { version = "0.16.1", features = ["derive", "validator_derive"] }
